# old-pkgr

./: .gitignore  Makefile.am  configure.ac  dev-init.sh  dev.sh
src/: commands.h  main.c  settings.c  settings.h  utils.h
src/commands/: install.c  library.c  package.c  query.c
src/pkgr/: install.c  install.h  library.c  library.h  package.c  package.h
src/utils/: exec.c  functions.c  io.c
tests/: setup.sh
tests/install/: added-to-library.sh  files-owned.sh  run-scripts.sh
tests/package/: create-tarxz.sh  create-with-name.sh  create-with-scripts.sh
tests/query/: owner-fails-if-not-found.sh  owner-match-by-full-path.sh
tests/spec/: install_blocked-if-file-already-owned.sh  install_create-files.sh  install_replace-file-ownership.sh  install_run-scripts.sh
